[UPDATE] makefile tarea 4, test.c tarea 5

--- a/tarea 4/Makefile
+++ b/tarea 4/Makefile
@@ -1,7 +1,7 @@
 all:
 
-	gcc -c pgm.c
-	gcc -c test.c
+	gcc -c pgm.c -Wall -pedantic -std=c99 -O2
+	gcc -c test.c -Wall -pedantic -std=c99 -O2
 	gcc -o runTest pgm.o test.o
 
 clean:
