[ADD] fix-up and print tree functions

--- a/tarea 7/Makefile
+++ b/tarea 7/Makefile
@@ -1,8 +1,9 @@
 all:
 
-	gcc -c rbtree.c
-	gcc -c test.c -Wall -pedantic
-	gcc -o runTest rbtree.o test.o
+	gcc -c rbtree.c -Wall -pedantic-errors -Werror -g
+	gcc -c printTree.c -Wall -pedantic-errors -Werror -g
+	gcc -c test.c -Wall -pedantic -g
+	gcc -o runTest printTree.o rbtree.o test.o -g
 
 clean:
 
